samples/_failures_safe/1761473395_d74f6a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b526972.c: In function ‘main’:
./samples/SAFE/__tmp_1b526972.c:187:12: error: expected declaration or statement at end of input
  187 |     struct calculator calc;
      |            ^~~~~~~~~~
